plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.team.snwa'
version = '0.0.1-SNAPSHOT'
description = 'snwa-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    // Spring AI 마일스톤 버전을 받기 위해 필요한 저장소
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // web
    implementation 'org.springframework.boot:spring-boot-starter-web'


    // database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.mysql:mysql-connector-j'

    // dev
    implementation 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    implementation 'io.jsonwebtoken:jjwt-impl:0.13.0'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // aws/s3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
    implementation 'software.amazon.awssdk:s3'

    // mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // env
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Selenium & Jsoup
    implementation 'org.seleniumhq.selenium:selenium-java:4.22.0'
    implementation 'org.jsoup:jsoup:1.18.3'

    // Spring AI
    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'

    // DeepL
    implementation "com.deepl.api:deepl-java:1.14.0"

    // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // test
    testImplementation 'com.h2database:h2'

    // Monitoring (Actuator & Prometheus)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Swagger (springdoc-openapi)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:1.1.2"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}